<resources>
    <string name="app_name">FlagQuizApp-Nayananga</string>
    <string name="guess_hints">Guess Hints</string>
    <string name="guess_the_flag">Guess The Flag</string>
    <string name="advanced">Advanced</string>
    <string name="image_description">image_description</string>
    <string name="home">Home</string>
    <string name="next">Next</string>
    <string name="wrong">Wrong!</string>
    <string name="submit">Submit</string>
    <string name="guess_the_country">Guess The Country</string>
    <string name="advance_level">Advance Level</string>
    <string name="textview">TextView</string>
    <string name="guess_flag_1">Guess Flag 1</string>
    <string name="guess_flag_2">Guess Flag 2</string>
    <string name="guess_flag_3">Guess Flag 3</string>
    <string name="correct">Correct!</string>

    <string name="title_activity_splash_screen">splash_screen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

</resources>
