<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity">

            <android.support.v7.widget.GridLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="16dp"
                android:layout_marginTop="96dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
               >

                <Button
                    android:id="@+id/ButtonGuessTheCountry"
                    android:layout_width="170dp"
                    android:layout_height="90dp"
                    android:onClick="guessTheCountry"
                    android:text="@string/guess_the_country"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/ButtonGuessHints"
                    android:layout_width="170dp"
                    android:layout_height="90dp"
                    android:onClick="guessHints"
                    android:text="@string/guess_hints"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_column="25"
                    app:layout_row="0" />

                <Button
                    android:id="@+id/ButtonGuessTheFlag"
                    android:layout_width="170dp"
                    android:layout_height="90dp"
                    android:onClick="guessTheFlag"
                    android:text="@string/guess_the_flag"
                    android:textStyle="bold"
                    app:layout_column="0"
                    app:layout_row="26" />

                <Button
                    android:id="@+id/ButtonAdvanced"
                    android:layout_width="170dp"
                    android:layout_height="90dp"
                    android:onClick="advanced"
                    android:text="@string/advance_level"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    app:layout_column="25"
                    app:layout_row="26" />
            </android.support.v7.widget.GridLayout>

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>